test/language/module/compile_error/compile_error.wren
System.print("before") // expect: before
import "module" for Module // expect runtime error: Could not compile module 'module'.
